# leg-cpu-emulator

./: Cargo.toml  Manual.md  README.md  index.html  mnemonics.txt
assets/: index-AumzI2qo.js  index-C1Y-v7qi.js  index-CkGJOk7k.css  index-DA3xos2G.js  index-DvwAsHCh.css  rust_wasm_playground_bg-CnDr_50A.wasm  rust_wasm_playground_bg-DRewN8AK.wasm
src/: asm.rs  assembler.rs  components.rs  emulator.rs  instruction.rs  lib.rs  main.rs  opcode.rs
tests/: assemble_and_run.rs  assembler.rs  emulator.rs
tests/asm/: fibonacci.asm  multibyte-integer-adding.asm  prime_numbers.asm  selection_sort.asm  water_world.asm
tests/data/: 1.asm  16bit_addressing.asm  fibonacci.asm  fibonacci.tc  function_stack.asm  hello_world.asm  hello_world.tc  input_output.asm  multibyte-integer-adding.asm  selection_sort.asm  selection_sort.c
web-ui/: Cargo.toml
web-ui/src/: lib.rs
web-ui/web/: .gitignore  package-lock.json  vite.config.ts
web-ui/web/src/: router.ts
web-ui/web/src/assets/leg-cpu-examples/hello-world/: code
web-ui/web/src/assets/leg-cpu-examples/prime-numbers/: code
web-ui/web/src/assets/leg-cpu-examples/water-world/: code
web-ui/web/src/components/: LegCpu.vue
