[package]
name = "leg-cpu-emulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
yeet-ops = "1.0.0"
regex = "1.10.6"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
hex-literal = "0.4.1"
hex = "0.4.3"
num-traits = "0.2.19"
num_enum = "0.7.3"
clap = { version = "4.5.17", features = ["derive"] }